--- a/full-stack-vue/package.json
+++ b/full-stack-vue/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "apexcharts": "^3.35.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vue3-apexcharts": "^1.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
